--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -59,8 +59,13 @@
             color: #74ADB5;
             text-decoration: none;
             font-size: 16px;
+
             &:active{
-                color: #5f8e94 ;
+                animation: navClick 1s;;
+            }
+
+            &:hover{
+                filter: brightness(1.25);
             }
 
             &:link{
