--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -41,6 +41,25 @@ $loginAndSignUpSize: 300px;
     }
 }
 
+@mixin popupmixin() {
+    @keyframes popUp {
+        0%{
+            min-width: 0px;
+            
+        }
+
+        100%{
+            min-width: 125px;
+    
+        }
+
+    }
+    
+}
+
+@mixin popUpAnimation{
+    animation: popUp 80ms;
+}
 
 
 
