--- a/src/style/style_components/_primary_tab.scss
+++ b/src/style/style_components/_primary_tab.scss
@@ -53,7 +53,7 @@
             background-color:$primaryHeaderBGColor;
             color:$secondaryTextColor;
             overflow: hidden;
-            
+            // transform-origin: 0% 50%;
 
 
 
