--- a/src/style/style_components/_main_container.scss
+++ b/src/style/style_components/_main_container.scss
@@ -1,4 +1,4 @@
-#main_container{
+.main_container{
     //this is to make it so there is whitespace on the sides
     margin: auto;
     width: $mainContainer;
