--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -56,7 +56,7 @@
         a{
             //need to move color in here to change the text
             margin-left: 15px;
-            color: #74ADB5;
+            color: $secondaryPHBGColor2;
             text-decoration: none;
             font-size: 16px;
 
@@ -66,10 +66,6 @@
 
             &:hover{
                 filter: brightness(1.25);
-            }
-
-            &:link{
-                color: #5f8e94 ;
             }
         }
 
