--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -15,9 +15,11 @@
 @import './style_components/ticket_form.scss';
 @import './style_components/setup_page.scss';
 @import './style_components/my_account_page';
+@import './style_components/animations';
 //Include the animation in the variable file on the top index so others can use it.
 @include blinkclick;
 @include popupmixin;
+@include shake;
 
 
 //The html has a default margin that you can deal with using
