--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -16,6 +16,7 @@
 @import './style_components/setup_page.scss';
 @import './style_components/my_account_page';
 @import './style_components/animations';
+@import './style_components//admin_page';
 //Include the animation in the variable file on the top index so others can use it.
 @include blinkclick;
 @include popupmixin;
