--- a/src/style/style_components/_my_account_page.scss
+++ b/src/style/style_components/_my_account_page.scss
@@ -167,7 +167,7 @@
                 animation: shake 175ms;
                 
                 p{
-                    margin: 5px;
+                    margin: 5px 0px;;
                     width: 100%;
                     height: fit-content;
                     word-wrap: break-all;
