--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,6 @@
+//https://stackoverflow.com/questions/29550422/css3-filter-performance-cpu-usage-why-do-certain-filters-tax-the-cpu
+// for animations and transitions use translate instead of margin
+
 //The variables will be needed to be imported first.
 //This is because the other components will use the variables.
 @import './style_components/variables.scss';
