--- a/src/style/style_components/_my_account_page.scss
+++ b/src/style/style_components/_my_account_page.scss
@@ -2,6 +2,7 @@
     display: flex;
     margin-top: 30px;
     font-family: $mainTextStyle;
+    margin-bottom: 50px;
   
     #my_account_nav_menu_container{
         display: flex;
