--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -13,7 +13,7 @@ $secondaryPHBGColor: #477284;
 $secondaryPHBGColor2: #74a5b9;
 ////Seach bar colors in primary header
 $activeTextColor:rgb(243, 243, 243);
-$secondaryTextColor: #A5A5A5;
+$secondaryTextColor: #bebebe;
 
 //Secondary coloring
 $secondarymainBGColor: rgb(32, 99, 138);
