--- a/src/style/style_components/_login_form.scss
+++ b/src/style/style_components/_login_form.scss
@@ -30,6 +30,10 @@
             padding-left: 10px;
             background-color: rgb(158, 31, 31);
             border-radius: 5px;
+            // animation: shake 175ms;
+        }
+
+        .shake{
             animation: shake 175ms;
         }
 
