--- a/src/style/style_components/_admin_page.scss
+++ b/src/style/style_components/_admin_page.scss
@@ -2,20 +2,42 @@
 
 .modal {
     color:$activeTextColor;
+    display: flex;
     position: absolute;
     background-color: $primaryHeaderBGColor2;
     left: 50%; 
     top: 50%;  
     transform: translate(-50%, -50%);
-    width: 300px;
+    // width: fit-content;
     height: fit-content;
     padding: 0 10px 15px 10px;
     border-radius: 5px;
     border: none;
     z-index: 1;
+    font-family: $mainTextStyle;
+
+    h2{
+        margin-top: 10px;
+        margin-bottom: 0;
+
+    }
+
+    .sub_title_text{
+        margin: 0;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        font-size: 12px;
+    }
 
     .error_message{
         @include errorStyling;
+
+        p{
+            max-width: 280px;
+        }
+      
+        
+
     }
 
     .shake{
