--- a/src/style/style_components/_my_account_page.scss
+++ b/src/style/style_components/_my_account_page.scss
@@ -172,7 +172,7 @@
                 
                 
                 p{
-                    margin: 5px 0px;;
+                    margin: 5px 0px;
                     width: 100%;
                     height: fit-content;
                     word-wrap: break-all;
