--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -89,8 +89,10 @@ $loginAndSignUpSize: 300px;
 
 @mixin errorStyling {
     word-wrap: break-word;
+    word-break: break-all;
     box-sizing: border-box;
-    display: flex;
+    //Use dispaly table-caption as it will take the width of the parent that is fit content
+    display: table-caption;
     justify-content: center;
     align-items: center;
     width: 100%;
