--- a/src/style/style_components/_admin_page.scss
+++ b/src/style/style_components/_admin_page.scss
@@ -8,7 +8,7 @@
     left: 50%; 
     top: 50%; 
     transform: translate(-50%, -50%);
-    
+    min-width: 250px;
     // width: fit-content;
   
     height: fit-content;
