--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -21,6 +21,7 @@
 @import './style_components/animations';
 @import './style_components//admin_page';
 @import './style_components//edit_admin_content';
+@import './style_components/ticket_info';
 //Include the animation in the variable file on the top index so others can use it.
 @include blinkclick;
 @include popupmixin;
