--- a/src/style/style_components/_admin_page.scss
+++ b/src/style/style_components/_admin_page.scss
@@ -9,7 +9,7 @@
     top: 50%; 
     transform: translate(-50%, -50%);
     min-width: 250px;
-    // width: fit-content;
+    width: fit-content;
   
     height: fit-content;
     padding: 0 10px 15px 10px;
