creating ticket admin page

--- a/src/style/style_components/_single_ticket.scss
+++ b/src/style/style_components/_single_ticket.scss
@@ -10,6 +10,10 @@
     padding: 0px 0px 0px 5px;
     margin-bottom: 5px;
 
+    &:hover{
+        cursor: pointer;
+    }
+
     a{
         color: white;
         text-decoration: none;
