--- a/src/style/style_components/_ticket_tab.scss
+++ b/src/style/style_components/_ticket_tab.scss
@@ -40,6 +40,10 @@
         overflow: hidden;
         font-family: $mainTextStyle;
         font-size: 14px;
+
+        &:hover{
+            cursor: pointer;
+        }
         
         i{
             //Makes it so the user cannot highlight the icon
