--- a/src/style/style_components/_admin_page.scss
+++ b/src/style/style_components/_admin_page.scss
@@ -10,8 +10,13 @@
     transform: translate(-50%, -50%);
     min-width: 250px;
     width: fit-content;
-  
+    max-width: 100vw;
+    
     height: fit-content;
+    max-height: 100vh;
+
+    overflow: auto;
+
     padding: 0 10px 15px 10px;
     border-radius: 5px;
     border: none;
